tetrate/tis1107/e2e/bad-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: bad-virtual-service
spec:
  hosts:
  - "my-app.example.com"
  gateways:
  - "my-gateway"
