tetrate/tis1107/e2e/good-resource.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: good-virtual-service
spec:
  hosts:
  - "my-app.example.com"
  gateways:
  - "example-namespace/my-gateway"
