tetrate/tis1107/e2e/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-gateway-nomenclature
spec:
  validationFailureAction: Enforce
